--- a/src/main/webapp/resources/css/member/cojoin-form-last.css
+++ b/src/main/webapp/resources/css/member/cojoin-form-last.css
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>sign-up_corporation_next</title>
-<style type="text/css">
-/* div {
-	box-shadow: 0 0 2px black;
-} */
+@charset "UTF-8";
 
 html,body {
 	width: 100%;
@@ -53,7 +45,7 @@ html,body {
 .rightBox {
 	float: left;
 	width: 750px;
-	background-color: #d2e4f9;
+	background-color: rgb(210, 228, 249);
 	height: 780px;
 }
 
@@ -74,28 +66,27 @@ html,body {
 	border-radius: 30px;
 }
 
-.progress_wrapper{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
+.signUpProgressBar{
+	background-color: white;
+	width: 400px;
+	animation: progressbar 2s ease-out;
 }
 
-.progress_bar{
-    height: 13px;
-    width: 400px;
-    background-color: #d9d9d9;
-    border-radius: 20px;
+progress::-webkit-progress-bar{
+	background-color: white;
 }
 
-.progress{
-    width: 66%;
-    height: 100%;
-    background-color: rgb(243, 156, 18);
-    border-radius: 20px;
+progress::-webkit-progress-value{
+	background-color: rgb(243, 156, 18);
+	height: 13px;
+	border-radius: 500px;
 }
 
 .form-signin-heading {
+	text-align: center;
+}
+
+.form-signin{
 	text-align: center;
 }
 
@@ -120,9 +111,9 @@ html,body {
 }
 
 .form-signin {
-	box-shadow: 5px 5px 5px #f9e3d1;
+	box-shadow: 5px 5px 5px rgb(254, 227, 205);
 	border-radius: 20px;
-	height: 620px;
+	height: 630px;
 	max-width: 530px;
 	padding: 20px 70px 35px;
 	margin: 0 auto;
@@ -136,13 +127,13 @@ input{
 }
 
 .form-control_id {
-	margin:15px;
+	margin:20px;
 	float: left;
-	border-style: solid;
 	border-radius: 5px;
+	border-color: lightgrey;
 	position: relative;
 	font-size: 13px;
-	width: 400px;
+	width: 280px;
 	height: 15px;
 	padding: 10px;
 	@include
@@ -155,13 +146,14 @@ input{
 .form-control_adress{
 	margin:15px;
 	float: left;
-	border-style: solid;
+	outline-color: lightgray;
 	border-radius: 5px;
 	position: relative;
 	font-size: 13px;
 	width: 230px;
 	height: 15px;
 	padding: 10px;
+	outline-color: lightgray;
 	@include
 	box-sizing(border-box);
 	&:focus{
@@ -175,14 +167,14 @@ input{
 	margin-left:15px;
 	margin-right:15px;
 	float: left;
+	outline-color: lightgray;
 	border-radius: 5px;
 	position: relative;
 	font-size: 13px;
 	width: 230px;
 	height: 15px;
 	padding: 10px;
-	border-color: #d3d3d3;
-	border-style: solid;
+	outline-color: lightgray;
 	@include
 	box-sizing(border-box);
 	&:focus{
@@ -202,8 +194,6 @@ input{
 	width: 85px;
 	height: 15px;
 	padding: 10px;
-	border-color: #d3d3d3;
-	border-style: solid;
 	@include
 	box-sizing(border-box);
 	&:focus{
@@ -214,14 +204,14 @@ input{
 .form-control_all {
 	margin:15px;
 	float: left;
+	outline-color: lightgray;
 	border-radius: 5px;
 	position: relative;
 	font-size: 13px;
 	width: 400px;
 	height: 15px;
 	padding: 10px;
-	border-color: #d3d3d3;
-	border-style: solid;
+	outline-color: lightgray;
 	@include
 	box-sizing(border-box);
 	&:focus{
@@ -231,19 +221,14 @@ input{
 
 /* Join_us 버튼 css */
 .btn-1 {
-	margin-bottom:22px;
-	margin-left:5px;
-	margin-right:22px;
-	margin-top:22px;
-	border-radius: 5px;
-	position: relative;
-	font-size: 20px;
-	padding: 10px;
-	width: 520px;
-	height: 45px;
-	background: #000;
+	margin-bottom: 10px;
+	border-radius: 10px;
+	font-size: 32px;
+	width: 500px;
+	height: 60px;
+	background: rgb(44, 62, 80);
 	color: #fff;
-	transition: all 0.3s ease;
+	font-weight: bold;
 }
 
 /* 제목 타이틀 */
@@ -267,13 +252,69 @@ input{
 	margin: 0px 16px;
 }
 
-
-
 .idMargin,
+.field,
 .nameMargin,
 .tellMargin{
-	height:90px;
-	margin: 5px;
+	margin: 2px;
+}
+
+.businessRegistration{
+	width:520px;
+	margin-bottom: 25px;
+	float: left;
+}
+
+.businessRegistration>label{
+	float: left;
+}
+
+.inputMargin{
+	margin-left: 40px;
+}
+
+.fileSelection{
+	float:left;
+	width: 100px;
+}
+
+.select_form{
+	display: flex;
+	flex-direction: column;
+	text-align: left;
+	width: 480px;
+	margin-bottom: 40px;
+}
+
+.repair{
+	margin-bottom:13px;
+	margin-left:19px;
+	margin-top:15px;
+	font-size:14px;
+	color:#FF5500;
+}
+
+.interior,
+.security{
+	margin-bottom:13px;
+	margin-left:20px;
+	font-size:14px;
+	color:#FF5500;
+}
+
+.bathroom_check,
+.interior_check,
+.security_check{
+	font-size:15px;
+	color:gray;
+	margin-left: 40px;
+	margin-bottom: 10px;
+}
+
+.bathroom_check>label,
+.interior_check>label,
+.security_check>label{
+	margin-right: 10px;
 }
 
 .adressMargin{
@@ -295,25 +336,54 @@ input{
 	float: left;
 }
 
+.select_wrap{
+	display: flex;
+	justify-content: flex-start;
+}
+
+.next_select_wrap{
+	display:none;
+	width: 530px;
+	height: 263px;
+}
+
+#next_page{
+	color: rgb(44, 62, 80);
+	font-weight:bold;	
+	font-size: 60px;
+	width: 50px;
+	height: 50px;
+	margin-top: 80px;
+}
+
+#prev_page{
+	color: rgb(44, 62, 80);
+	font-weight:bold;	
+	font-size: 60px;
+	width: 50px;
+	height: 50px;
+	margin-top: 80px;
+}
+
 .button_next{
 	float:right;
 	border-radius: 12px;
-	background-color: #2c3e50;
+	background-color: rgb(44, 62, 80);
+	width: 100px;
+	height: 50px;
+	margin: 0 0 0 15px;
     border: none;
     color: white;
-    padding: 15px 32px;
     text-align: center;
-    text-decoration: none;
     display: inline-block;
-    font-size: 18px;
-    margin: 4px 2px;
+    font-size: 20px;
     cursor: pointer;
 }
 
 .button_check{
 	float:right;
 	border-radius: 12px;
-	background-color: #e0e0e0;
+	background-color: #E5E4E2;
     border: none;
     color: 0C090A;
     padding: 8px 15px;
@@ -326,6 +396,7 @@ input{
 }
 
 .button_adress_check{
+	margin-top:20px;
 	float:left;
 	border-radius: 12px;
 	background-color: #E5E4E2;
@@ -336,7 +407,6 @@ input{
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 15px 2px;
     cursor: pointer;
 }
 
@@ -352,7 +422,6 @@ input{
 }
 
 .before_left{
-	margin-top:50px;
 	float: left;
 }
 
@@ -360,79 +429,23 @@ input{
 	margin-top:50px;
 	float: right;
 }
-</style>
 
-
-</head>
-<body>
-<div class="wrap">
-	<div class="topBar">
-		<div class="leftBox">
-			<div class="MainLogoHelp"></div>
-			<div class="login-page-left"></div>
-		</div>
-
-		<div class="rightBox">
-			<div class="loginTitle">
-				<div class="loginTopBlank"></div>
-					<div>
-						<form class="form-signin">
-							<div class='progress_wrapper'>
-                                <div class='progress_bar'>
-                                    <div class='progress'></div>
-                                </div>
-                            </div>
-							<label style="float: right; margin-right: 40px; margin-top: 5px;">66%</label><br>
-						<div class="hr-sect">전문 &nbsp해협</div><br>
-						
-						<div class="idMargin">
-							<label>* 이메일</label><br> 								
-								<input type="text" class="form-control_all" name="username" placeholder="이메일을 입력하세요." 
-									required="" autofocus="" /><br><br>
-						</div>
-						
-						<div class="idMargin">
-							<label>* 업체명</label><br> 
-								<input type="text" class="form-control_id" name="username" 
-								placeholder="업체명을 작성해주세요" required="" autofocus="" />
-								
-								
-						</div>
-						
-						<div class="adressMargin">
-							<label>* 주소</label><br> 
-								<input type="text" class="form-control_adress" name="username" 
-								placeholder="기본 주소를 입력해주세요." required="" autofocus="" />
-								
-								<input type="text" class="form-control_adress_check" name="username" 
-								placeholder="우편번호	" required="" autofocus="" />
-								
-								<div class="check">
-									<button class="button_adress_check">주소 찾기</button>
-								</div>
-								
-								<input type="text" class="form-control_detail_adress" name="username" 
-								placeholder="상세 주소를 입력해주세요." required="" autofocus="" />
-						</div>
-						
-						<div>
-							<!-- <button class="custom-btn btn-1">J O I N &nbsp U S</button> -->
-						</div>
-						
-						
-						<div class="before_left">
-							<button class="button_next">< 이전</button>
-						</div>
-						
-						<div class="next_right">
-							<button class="button_next">다음 ></button>
-						</div>
-						
-				</form>
-			</div>
-		</div>
-	</div>
-</div>
-</div>
-</body>
-</html>
+.Attachments{
+	float:left;
+	border-radius: 12px;
+	background-color: #E5E4E2;
+    border: none;
+    color: 0C090A;
+    padding: 8px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    
+    margin-top: 15px;
+	margin-right:85px;
+	float: right;
+	
+}
