--- a/src/main/webapp/resources/css/community/style.css
+++ b/src/main/webapp/resources/css/community/style.css
@@ -1,5 +1,5 @@
 /*공용 css임 절대 수정하면 안됨 */
-nav, div, ul, li, a, span {
+div {
 	display: flex;
 }
 
@@ -9,11 +9,6 @@ html, body {
 	min-width: 1130px;
 	display: flex;
 	justify-content: center;
-}
-
-#header {
-	height: 100px;
-	background-color: white;
 }
 
 #search_case {
@@ -27,6 +22,7 @@ html, body {
 #search_case_inner_div_1 {
 	width: 200px;
 	margin-left: 50px;
+	font-weight: bold;
 }
 
 #search_case_inner_div_3 {
@@ -59,74 +55,7 @@ html, body {
 
 .wrap {
 	display: block;
-	width: 1130px;
-	background-color: white;
-}
-
-.navbar {
-	width: 1130px;
-	height: 100px;
-	display: flex;
-	justify-content: space-around;
-	flex-shrink: 0;
-}
-
-.nav_group {
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
-}
-
-.nav_info {
-	display: flex;
-	justify-content: flex-end;
-	margin-right: 75px;
-	font-size: 17px;
-}
-
-.userName {
-	margin-right: 6px;
-	font-weight: bolder;
-}
-
-.nim {
-	margin-right: 10px;
-	font-size: 13px;
-	align-self: center;
-	margin-top: 4px;
-	font-weight: bolder;
-}
-
-.medal {
-	margin-right: 20px;
-	align-self: center;
-	color: #e6bc14;
-}
-
-.mypage {
-	margin-right: 20px;
-	font-weight: bolder;
-}
-
-.logout {
-	font-weight: bolder;
-	color: #e67e00
-}
-
-.nav_title {
-	display: flex;
-	justify-content: space-around;
-	font-size: 20px;
-	font-weight: bolder;
-}
-
-.talk {
-	color: rgb(41, 128, 185);
-}
-
-/*로고*/
-.logo {
-	width: 200px;
-	align-self: center;
+    width: 1130px;
+    height: 100%;
+    background-color: white;
 }
