--- a/src/main/webapp/resources/css/include/head/menu_head.css
+++ b/src/main/webapp/resources/css/include/head/menu_head.css
@@ -151,3 +151,22 @@ html, body {
     color: black;
     font-weight: bolder;
 }
+
+a{
+   color:black;
+   text-decoration: none;   
+   cursor:pointer;
+   margin: 0;
+}
+
+li, a, ul {
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+
+ul {
+	list-style: none;
+}
