--- a/src/main/webapp/resources/css/community/view_board.css
+++ b/src/main/webapp/resources/css/community/view_board.css
@@ -247,3 +247,12 @@
 	border: none;
 }
 
+.add{
+	text-align: center;
+	font-weight: bold;
+	font-size: 18px;
+	margin-bottom: 10px;
+	color: #333333;
+}
+
+
