--- a/src/main/webapp/resources/css/include/head/menu_head.css
+++ b/src/main/webapp/resources/css/include/head/menu_head.css
@@ -1,84 +1,75 @@
-<<<<<<< HEAD
-html, body {
-	width: 100%;
-	height: 1700px;
-	min-width: 1130px;
-	display: flex;
-	justify-content: center;
-}
-=======
->>>>>>> refs/heads/dev
+
 .navbar {
-	width: 1130px;
-	height: 100px;
-	display: flex;
-	justify-content: space-around;
-	flex-shrink: 0;
-	position: relative;
+   width: 1130px;
+   height: 100px;
+   display: flex;
+   justify-content: space-around;
+   flex-shrink: 0;
+   position: relative;
 }
 
 .nav_group {
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
+   width: 100%;
+   display: flex;
+   flex-direction: column;
+   justify-content: space-around;
 }
 
 .nav_info {
-	display: flex;
-	justify-content: flex-end;
-	margin-right: 75px;
-	font-size: 17px;
+   display: flex;
+   justify-content: flex-end;
+   margin-right: 75px;
+   font-size: 17px;
 }
 
 .userName {
-	margin-right: 6px;
-	font-weight: bolder;
+   margin-right: 6px;
+   font-weight: bolder;
 }
 
 .nim {
-	margin-right: 10px;
-	font-size: 13px;
-	align-self: center;
-	margin-top: 4px;
-	font-weight: bolder;
+   margin-right: 10px;
+   font-size: 13px;
+   align-self: center;
+   margin-top: 4px;
+   font-weight: bolder;
 }
 
 .medal {
-	margin-right: 20px;
-	align-self: center;
-	color: #e6bc14;
+   margin-right: 20px;
+   align-self: center;
+   color: #e6bc14;
 }
 
 .mypage {
-	margin-right: 20px;
-	font-weight: bolder;
+   margin-right: 20px;
+   font-weight: bolder;
 }
 
 .logout {
-	font-weight: bolder;
-	color: #e67e00;
+   font-weight: bolder;
+   color: #e67e00
 }
 
 .nav_title {
-	display: flex;
-	justify-content: space-around;
-	font-size: 20px;
-	font-weight: bolder;
+   display: flex;
+   justify-content: space-around;
+   font-size: 20px;
+   font-weight: bolder;
 }
 
 .nav_title>a>div {
-	width: 90px;
+   width: 90px;
 }
 
 .nav_title div:hover {
-	color:  rgb(41, 128, 185);
+   color:  rgb(41, 128, 185);
 }
 
 /*로고*/
 .logo {
-	width: 200px;
-	align-self: center;
+   width: 200px;
+   align-self: center;
 }
 
 /* 상단 메뉴바 css */
@@ -90,11 +81,11 @@ html, body {
     height: 200px;
     left: 0;
     bottom: -180px;
-    z-index: 2002;
+    z-index: 11;
 }
 
 .gnb__sub-category-wrap>div {
-	display: flex;
+   display: flex;
 }
 
 .gnb__sub-category-img-wrap {
@@ -103,7 +94,7 @@ html, body {
     width: 200px;
     height: 200px;
     max-height: 100%;
-	background-color: white;
+   background-color: white;
 }
 
 .gnb__sub-category-img {
@@ -112,8 +103,8 @@ html, body {
 }
 
 .bee1 {
-	width: 100%;
-	height: 180px;
+   width: 100%;
+   height: 180px;
 }
 
 .gnb__2depth-wrap {
@@ -121,10 +112,10 @@ html, body {
     height: 210px;
     padding-top: 10px;
     display: flex;
-	justify-content: space-around;
-	font-size: 20px;
-	font-weight: bolder;
-	background-color: white;
+   justify-content: space-around;
+   font-size: 20px;
+   font-weight: bolder;
+   background-color: white;
 }
 
 .gnb-2depth {
@@ -145,8 +136,8 @@ html, body {
     width: 90px;
 }
 .gnb-2depth__item a {
-	font-size: 15px;
-	flex-shrink: 0;
+   font-size: 15px;
+   flex-shrink: 0;
     color: gray;
 }
 
@@ -163,13 +154,13 @@ a{
 }
 
 li, a, ul {
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+   padding: 0;
+   border: 0;
+   font-size: 100%;
+   font: inherit;
+   vertical-align: baseline;
 }
 
 ul {
-	list-style: none;
+   list-style: none;
 }
