--- a/src/main/webapp/resources/css/include/head/menu_head.css
+++ b/src/main/webapp/resources/css/include/head/menu_head.css
@@ -1,3 +1,10 @@
+html, body {
+	width: 100%;
+	height: 1700px;
+	min-width: 1130px;
+	display: flex;
+	justify-content: center;
+}
 
 .navbar {
    width: 1130px;
@@ -80,7 +87,7 @@
     width: 1130px;
     height: 200px;
     left: 0;
-    bottom: -180px;
+    bottom: -190px;
     z-index: 2002;
 }
 
