--- a/src/main/webapp/resources/css/purchase/purchase-detail-writer.css
+++ b/src/main/webapp/resources/css/purchase/purchase-detail-writer.css
@@ -1,20 +1,24 @@
+html {
+	width: 100%;
+	height: 930px;
+	min-width: 1130px;
+	display: flex;
+	justify-content: center;
+}
 
-body, html{
-   /* heigth: 690px; */
-   position: relative;
-   min-height: 690px;
-   width: 1130px;
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   font-family: 'Han Sans, 본고딕';
+body {
+	width: 1130px;
+	height: 930px;
+	min-width: 1130px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 
-
-
-
-
+.section{
+	width: 1073px;
+}
 
 /* form wrapper */
 .form-wrapper{
@@ -193,7 +197,10 @@ body, html{
 	background-color: #f9b67a;
 }
 
-
+#stock-list {
+	list-style-type: disc;
+	padding-left: 40px;
+}
 
 
 
