--- a/src/main/webapp/resources/css/purchase/purchase-detail.css
+++ b/src/main/webapp/resources/css/purchase/purchase-detail.css
@@ -1,25 +1,26 @@
 
 
-body, html{
-   /* heigth: 690px; */
-   position: relative;
-   min-height: 690px;
-   width: 1130px;
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   font-family: 'Han Sans, 본고딕';
+html {
+	width: 100%;
+	height: 930px;
+	min-width: 1130px;
+	display: flex;
+	justify-content: center;
 }
 
-/* 섹션 시작*/
+body {
+	width: 1130px;
+	height: 930px;
+	min-width: 1130px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
 
 .section{
-	height: 100%;
-	width: 95%;
+	width: 1073px;
 }
-
-
-
 
 
 /* form wrapper */
@@ -32,7 +33,7 @@ body, html{
 /* 제목 파트 */
 
 .title {
-	margin-top: 30px;
+	margin-top: 30px;z
 	margin-bottom: 20px;
 	margin-left: 50px;
 	margin-right: 50px;
@@ -190,8 +191,10 @@ body, html{
 	background-color: #f9b67a;
 }
 
-
-
+#stock-list {
+	list-style-type: disc;
+	padding-left: 40px;
+}
 
 
 
