--- a/src/main/webapp/resources/css/purchase/purchase-main.css
+++ b/src/main/webapp/resources/css/purchase/purchase-main.css
@@ -1,22 +1,25 @@
 
-body, html{
-   /* heigth: 690px; */
-   position: relative;
-   min-height: 690px;
-   width: 1130px;
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   font-family: 'Han Sans, 본고딕';
+html {
+	width: 100%;
+	height: 1321px;
+	min-width: 1130px;
+	display: flex;
+	justify-content: center;
 }
 
-/* 섹션 시작*/
+body {
+	width: 1130px;
+	height: 1321px;
+	min-width: 1130px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
 
 .section{
-	height: 100%;
-	width: 95%;
+	width: 1073px;
 }
-
 
 
 
