--- a/src/main/webapp/resources/css/member/login-form.css
+++ b/src/main/webapp/resources/css/member/login-form.css
@@ -242,3 +242,11 @@ html,body {
 	border-radius: 5px;
 	border-color: rgb(213, 213, 213);
 }
+
+.loginFail{
+	text-align: center;
+	font-weight: bold;
+	font-size: 18px;
+	margin-bottom: 10px;
+	color: #333333;
+}
