--- a/src/main/webapp/resources/css/include/chat/chat.css
+++ b/src/main/webapp/resources/css/include/chat/chat.css
@@ -7,7 +7,7 @@ div {
    position: fixed;
    height: 80px;
    width: 80px;
-   background-image: url("../../../resources/image/chatting.png");
+   background-image: url("../../../../resources/image/chatting.png");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
@@ -22,7 +22,7 @@ div {
    position: fixed;
    height: 58px;
    width: 58px;
-   background-image: url("../../../resources/image/chatting.png");
+   background-image: url("../../../../resources/image/chatting.png");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
