--- a/src/main/webapp/resources/css/include/chat/chat-room.css
+++ b/src/main/webapp/resources/css/include/chat/chat-room.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 body{
  -ms-overflow-style: none;
+ margin: 0;
  }
  
 ::-webkit-scrollbar {
@@ -60,7 +61,7 @@ body{
 
 .chatting_wrap {
 	width: 422px;
-	height: 588px;
+	height: 500px;
 	padding: 15px;
 	overflow: auto;
 }
@@ -88,13 +89,15 @@ body{
 	background-color: rgb(237, 237, 237);
 	border-radius: 5px;
 	margin-right: 10px;
+	word-break: break-all;
+	padding: 5px 10px 5px 10px;
 }
 #sender_msg_tail {
 	position:absolute;
 	width:0;
 	height:0;
 	left:0;
-	top:50%;
+	top:40%;
 	margin-left:-15px;
 	border-top:8px solid transparent;
 	border-bottom:8px solid transparent;
@@ -123,13 +126,15 @@ body{
 	background-color: rgb(131, 221, 169);
 	border-radius: 5px;
 	margin-left: 10px;
+	word-break: break-all;
+	padding: 5px 10px 5px 10px;
 }
 #my_msg_tail {
 	position:absolute;
 	width:0;
 	height:0;
 	right:0;
-	top:50%;
+	top:40%;
 	margin-right:-15px;
 	border-top:8px solid transparent;
 	border-bottom:8px solid transparent;
