--- a/src/main/webapp/resources/css/member/cojoin-form.css
+++ b/src/main/webapp/resources/css/member/cojoin-form.css
@@ -287,7 +287,7 @@ html,body {
 
 .button_next{
 	border-radius: 12px;
-	background-color: rgba(52, 73, 94, 0.98);
+	background-color: lightgray;
 	width: 130px;
 	height: 100%;
     border: none;
@@ -301,7 +301,7 @@ html,body {
 }
 
 .button_next:hover{
-	background-color: #3f5973;
+	background-color: lightgray;
 	box-shadow: inset 0 0 5px 1px #243342;
 }
 
