--- a/src/main/webapp/resources/css/member/social-join-form.css
+++ b/src/main/webapp/resources/css/member/social-join-form.css
@@ -134,16 +134,6 @@ input{
 	outline-color: #d3d3d3;
 }
 
-.form-control_id {
-	margin:15px;
-	float: left;
-	border-radius: 5px;
-	position: relative;
-	font-size: 13px;
-	width: 280px;
-	height: 15px;
-	padding: 10px;
-}
 
 .form-control_all {
 	margin:15px;
@@ -156,28 +146,7 @@ input{
 	padding: 10px;
 }
 
-.form-control-pw-top {
-	margin: 15px 15px 5px 15px;
-	float: left;
-	border-radius: 5px;
-	position: relative;
-	font-size: 13px;
-	width: 400px;
-	height: 15px;
-	padding: 10px;
-}
 
-.form-control-pw-btm {
-	margin: 5px 15px 15px 15px;
-	float: left;
-	border-radius: 5px;
-	position: relative;
-	font-size: 13px;
-	width: 400px;
-	height: 15px;
-	padding: 10px;
-	outline-color: lightgray;
-}
 
 /* 중복 확인 버튼 CSS */
 .btn-1 {
@@ -190,7 +159,6 @@ input{
 	outline: none;
 	background-color: #59b1eb;
 	float: left;
-	margin: 10px;
 }
 
 /* 제목 타이틀 */
@@ -319,23 +287,318 @@ input{
 	box-shadow: inset 0 0 5px 1px #243342;
 }
 
-.button_check{
-	float:right;
-	border-radius: 12px;
+.button_check {
+	border-radius: 10px;
 	background-color: lightgray;
-    border: none;
-    color: 0C090A;
-    padding: 8px 15px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
+	border: none;
+	background-color: 0C090A;
+	text-align: center;   
+	text-decoration: none;
+	font-size: 16px;
+	cursor: pointer;
+	width: 90px;
+	height: 37px;
+	margin-top: 14px;
 }
 
 .check{
-	margin-top: 9px;
-	margin-right:85px;
 	float: right;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.MainLogoHelp {
+	height: 130px;
+	width: 280px;
+	margin: 0 25px 0 25px;
+	padding-top: 30px;
+	background-image: url('../../../resources/image/main-logo.png');
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-position: center;
+}
+
+.login-page-left{
+	height: 590px;
+	width: 100%;
+	margin-right: 5px;
+	background-image: url('../../../resources/image/login-page-left.png');
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-position: center;
+}
+
+/* 오른쪽 박스 기준 */
+.rightBox {
+	float: left;
+	width: 750px;
+	background-color: #d2e4f9;
+	height: 780px;
+}
+
+.loginTopBlank {
+	height: 70px;
+}
+
+.loginleftBlank {
+	float: left;
+	height: 450px;
+	width: 70px;
+}
+
+.loginMainTitle {
+	float: left;
+	height: 450px;
+	width: 610px;
+	border-radius: 30px;
+}
+
+
+.progress_wrapper{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.progress_bar{
+    height: 13px;
+    width: 400px;
+    background-color: #d9d9d9;
+    border-radius: 20px;
+}
+
+.progress{
+    width: 100%;
+    height: 100%;
+    background-color: rgb(243, 156, 18);
+    border-radius: 20px;
+}
+
+.form-signin-heading {
+	text-align: center;
+}
+
+.loginRightBlank {
+	float: left;
+	height: 450px;
+	width: 70px;
+}
+
+.loginBottomBlank {
+	float: left;
+	height: 107px;
+	width: 750px;
+}
+
+/*  */
+@import "bourbon";
+
+.wrapper {
+	/* margin-top: 80px; */
+	margin-bottom: 80px;
+}
+
+.form-signin {
+	box-shadow: 5px 5px 5px #f9e3d1;
+	border-radius: 20px;
+	height: 620px;
+	max-width: 530px;
+	padding: 20px 70px 35px;
+	margin: 0 auto;
+	background-color: #fff;
+	border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+input{
+	border: 1px solid lightgray;
+	outline-color: #d3d3d3;
+}
+
+.form-control_id {
+	margin:15px;
+	float: left;
+	border-radius: 5px;
+	position: relative;
+	font-size: 13px;
+	width: 280px;
+	height: 15px;
+	padding: 10px;
+	border-style: solid;
+	@include
+	box-sizing(border-box);
+	&:focus{
+	z-index:2;
+	}
+}
+
+.form-control_adress{
+	margin:15px;
+	float: left;
+	border-radius: 5px;
+	position: relative;
+	font-size: 13px;
+	width: 230px;
+	height: 15px;
+	padding: 10px;
+	border-style: solid;
+	@include
+	box-sizing(border-box);
+	&:focus{
+	z-index:2;
+	}
+}
+
+.form-control_detail_adress{
+	/* margin:15px; */
+	margin-bottom:15px;
+	margin-left:15px;
+	margin-right:15px;
+	float: left;
+	border-radius: 5px;
+	position: relative;
+	font-size: 13px;
+	width: 230px;
+	height: 15px;
+	padding: 10px;
+	border-style: solid;
+	@include
+	box-sizing(border-box);
+	&:focus{
+	z-index:2;
+	}
+}
+
+.form-control_adress_check{
+	/* margin:15px; */
+	float: left;
+	border-radius: 5px;
+	position: relative;
+	font-size: 13px;
+	width: 85px;
+	height: 15px;
+	padding: 10px;
+	margin-top: 15px;s
+	border-color: #d3d3d3;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+	border-style: solid;
+	@include
+	box-sizing(border-box);
+	&:focus{
+	z-index:2;
+	}
+}
+
+.form-control_all {
+	margin:15px;
+	float: left;
+	border-radius: 5px;
+	position: relative;
+	font-size: 13px;
+	width: 400px;
+	height: 15px;
+	padding: 10px;
+	border-color: #d3d3d3;
+	border-style: solid;
+	@include
+	box-sizing(border-box);
+	&:focus{
+	z-index:2;
+	}
+}
+
+/* Join_us 버튼 css */
+.btn-1 {
+	display: flex;
+	border-radius: 5px;
+	position: relative;
+	font-size: 18px;
+	width: 130px;
+	height: 60px;
+	background: #2c3e50;
+	cursor: pointer;
+	color: #fff;
+	transition: all 0.3s ease;
+	justify-content: center;
+}
+
+
+
+.level{
+	float: left;
+}
+
+
+
+.button_adress_check{
+	display: flex;
+	flex-shrink: 0;
+	float:left;
+	border-radius: 12px;
+	background-color: #e0e0e0;
+    border: none;
+    width: 90px;
+    height: 37px;
+    color: 0C090A;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    margin-top: 15px;
+    cursor: pointer;
+    justify-content: center;
+    align-items: center;
+}
+
+.click_image{
+	margin-top: 20px;
+	margin-left: 30px;
+}
+
+.next{
+	float: left;
+}
+
+
+
+
+
+
+
+
+
+
