[11.16 경민] 회원가입, 비밀번호 변경 메일 템플릿 추가

--- a/src/main/webapp/WEB-INF/views/mail-template/NewFile.html
+++ b/src/main/webapp/WEB-INF/views/mail-template/NewFile.html
@@ -1,11 +1,5 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8"%>
-<!DOCTYPE html>
-<html>
-
-<head>
-    <title></title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional //EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><!--[if IE]><html xmlns="http://www.w3.org/1999/xhtml" class="ie"><![endif]--><!--[if !IE]><!--><html style="margin: 0;padding: 0;" xmlns="http://www.w3.org/1999/xhtml"><!--<![endif]--><head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
     <!--[if !mso]><!--><meta http-equiv="X-UA-Compatible" content="IE=edge" /><!--<![endif]-->
     <meta name="viewport" content="width=device-width" /><style type="text/css">
@@ -530,7 +524,7 @@ p{
             
               <div style="Margin-left: 20px;Margin-right: 20px;">
       <div style="mso-line-height-rule: exactly;mso-text-raise: 11px;vertical-align: middle;">
-        <h1 style="Margin-top: 0;Margin-bottom: 20px;font-style: normal;font-weight: normal;color: #363f49;font-size: 40px;line-height: 47px;font-family: Oswald,Avenir Next Condensed,Arial Narrow,MS UI Gothic,sans-serif;text-align: center;">Change your password!</h1>
+        <h1 style="Margin-top: 0;Margin-bottom: 20px;font-style: normal;font-weight: normal;color: #363f49;font-size: 40px;line-height: 47px;font-family: Oswald,Avenir Next Condensed,Arial Narrow,MS UI Gothic,sans-serif;text-align: center;">it&#8217;s great to meet you!</h1>
       </div>
     </div>
             
@@ -569,7 +563,7 @@ p{
         
             <div style="Margin-left: 20px;Margin-right: 20px;">
       <div style="mso-line-height-rule: exactly;mso-text-raise: 11px;vertical-align: middle;">
-        <p style="Margin-top: 0;Margin-bottom: 0;text-align: center;">아이쿠! 비밀번호를 잊으셨군요!</p><p style="Margin-top: 20px;Margin-bottom: 0;text-align: center;">비밀번호를 재설정하고 다양한 해협활동들을 즐겨보아요~</p><p style="Margin-top: 20px;Margin-bottom: 20px;text-align: center;">하단의 버튼을 클릭하여 비밀번호 재설정을 완료해주세요!</p>
+        <p style="Margin-top: 0;Margin-bottom: 0;text-align: center;">&#51088;&#52712;&#54644;&#54801;&#50640; &#50724;&#49888;&#44152; &#54872;&#50689;&#54633;&#45768;&#45796;!</p><p style="Margin-top: 20px;Margin-bottom: 0;text-align: center;">&#45796;&#50577;&#54620; &#54644;&#54801;&#54876;&#46041;&#46308;&#51012; &#53685;&#54644; &#51600;&#44144;&#50868; &#51088;&#52712;&#49373;&#54876; &#49884;&#51089;&#54644;&#48400;&#50836;~</p><p style="Margin-top: 20px;Margin-bottom: 20px;text-align: center;">&#54616;&#45800;&#51032; &#48260;&#53948;&#51012; &#53364;&#47533;&#54616;&#50668; &#54924;&#50896;&#44032;&#51077;&#51012; &#50756;&#47308;&#54644;&#51452;&#49464;&#50836;!</p>
       </div>
     </div>
         
@@ -579,7 +573,7 @@ p{
         
             <div style="Margin-left: 20px;Margin-right: 20px;">
       <div class="btn btn--shadow btn--large" style="Margin-bottom: 20px;text-align: center;">
-        <![if !mso]><a style="border-radius: 4px;display: inline-block;font-size: 24px;font-weight: bold;line-height: 44px;padding: 12px 24px 13px 24px;width: 200px; height: 50px;text-align: center;text-decoration: none !important;transition: opacity 0.1s ease-in;color: #ffffff !important;box-shadow: inset 0 -2px 0 0 rgba(0, 0, 0, 0.2);background-color: #86b7d9;font-family: Gill Sans, Gill Sans MT, Trebuchet MS, sans-serif;" href="http://localhost:9090/member/findpw-impl/${param.persistToken}">&#54924;&#50896;&#44032;&#51077;!</a><![endif]>
+        <![if !mso]><a style="border-radius: 4px;display: inline-block;font-size: 24px;font-weight: bold;line-height: 44px;padding: 12px 24px 13px 24px;width: 200px; height: 50px;text-align: center;text-decoration: none !important;transition: opacity 0.1s ease-in;color: #ffffff !important;box-shadow: inset 0 -2px 0 0 rgba(0, 0, 0, 0.2);background-color: #86b7d9;font-family: Gill Sans, Gill Sans MT, Trebuchet MS, sans-serif;" href="http://localhost:9090/member/join-impl/${param.persistToken}">&#54924;&#50896;&#44032;&#51077;!</a><![endif]>
       <!--[if mso]><p style="line-height:0;margin:0;">&nbsp;</p><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" href="https://example.com" style="width:108px" arcsize="9%" fillcolor="#86B7D9" stroke="f"><v:shadow on="t" color="#6B92AE" offset="0,2px"></v:shadow><v:textbox style="mso-fit-shape-to-text:t" inset="0px,11px,0px,10px"><center style="font-size:14px;line-height:24px;color:#FFFFFF;font-family:Gill Sans,Gill Sans MT,Trebuchet MS,sans-serif;font-weight:bold;mso-line-height-rule:exactly;mso-text-raise:4px">&#54924;&#50896;&#44032;&#51077;!</center></v:textbox></v:roundrect><![endif]--></div>
     </div>
         
