[11.16 구현] 마이페이지 세션에 담긴 값 불러오기

--- a/src/main/webapp/resources/css/mypage/mypage_common_css.css
+++ b/src/main/webapp/resources/css/mypage/mypage_common_css.css
@@ -345,9 +345,33 @@ html, body {
 	align-items: center;
 }
 
+#normal {
+	font-weight: bolder;
+	color: black;
+	margin-left: 30px;
+}
+
+#bronze {
+	font-weight: bolder;
+	color: bronze;
+	margin-left: 30px;
+}
+
+#silver {
+	font-weight: bolder;
+	color: silver;
+	margin-left: 30px;
+}
+
 #gold {
 	font-weight: bolder;
 	color: gold;
+	margin-left: 30px;
+}
+
+#dia {
+	font-weight: bolder;
+	color: blue;
 	margin-left: 30px;
 }
 
