[11.17 경민] push push babe~~다들 화이팅♥

--- a/src/main/webapp/resources/css/main/main.css
+++ b/src/main/webapp/resources/css/main/main.css
@@ -46,11 +46,17 @@ html, body{
 	font-weight: bold;
 	color: orange;
 	margin-right: 10px;
+	cursor: pointer;
 }
 
 .join_btn{
 	font-size: 20px;
 	font-weight: bold;
+	cursor: pointer;
+}
+
+.logout{
+	cursor: pointer;
 }
 
 .cate_wrap{
