--- a/src/main/webapp/resources/css/include/chat/chat-room.css
+++ b/src/main/webapp/resources/css/include/chat/chat-room.css
@@ -27,6 +27,81 @@ body{
 	color: red;
 }
 
+#out {
+	position: absolute;
+    width: 105px;
+    height: 31px;
+    background: lightcoral;
+    top: 0px;
+    left: 193.5px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 1px 1px 1px lightgrey;
+    cursor: pointer;
+}
+
+#out:hover {
+	background: red;
+}
+
+#out>div {
+	color: white;
+	font-size: 13px;
+}
+
+#plusBtn {
+	position: absolute;
+	top: 60px;
+	right:17.5px;
+	font-size: 22px;
+	cursor: pointer;
+	color: darkgreen;
+}
+
+#plusBtn:hover {
+	color: black;
+}
+
+#memberList {
+    position: absolute;
+    width: 127px;
+    height: 527px;
+    top: 90px;
+    left: 321.5px;
+    border: 1px solid gray;
+    box-shadow: 0 1px 1px 1px lightgrey;
+    overflow: auto;
+    z-index: 1000;
+    background: whitesmoke;
+    border: none;
+    padding: 10px;
+}
+
+#member_wrap {
+	width: 100%;
+    height: 37px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#member {
+	font-size: 16px;
+	font-weight: bolder;
+}
+
+#plusFriend {
+	cursor: pointer;
+    font-size: 20px;
+    color: darkgreen;
+}
+
+#plusFriend:hover {
+	color: black;
+}
+
 .room_wrap {
 	width: 100%;
 	height: 100%;
