--- a/src/main/webapp/resources/css/include/chat/chat.css
+++ b/src/main/webapp/resources/css/include/chat/chat.css
@@ -112,7 +112,7 @@ div {
     font-size: 15px;
     margin-left: 20px;
     max-height: 20px;
-    max-width: 160px;
+    width: 160px;
     overflow: hidden;
 }
 
