--- a/src/main/webapp/resources/css/include/chat/chat-room.css
+++ b/src/main/webapp/resources/css/include/chat/chat-room.css
@@ -9,8 +9,8 @@ body{
 }
 .room_con {
 	position: relative;
-	width: 487px;
-	height: 741px;
+	width: 424px;
+	height: 599px;
 	background-color: rgba(250, 248, 245, 0.78); 
 	border-width: 0px; 
 	border-style: none; 
@@ -28,12 +28,11 @@ body{
 }
 
 #out {
-	position: absolute;
     width: 105px;
     height: 31px;
+    position: relative;
+    right: -2px;
     background: lightcoral;
-    top: 0px;
-    left: 193.5px;
     border-radius: 5px;
     display: flex;
     justify-content: center;
@@ -57,26 +56,31 @@ body{
 	right:17.5px;
 	font-size: 22px;
 	cursor: pointer;
-	color: darkgreen;
+	color: gray;
 }
 
 #plusBtn:hover {
 	color: black;
 }
 
-#memberList {
+#chatting_menu {
     position: absolute;
-    width: 127px;
-    height: 527px;
+    width: 110px;
+    height: 475px;
     top: 90px;
-    left: 321.5px;
+    left: 278.5px;
     border: 1px solid gray;
+    border-radius: 0 25px 25px 0;
     box-shadow: 0 1px 1px 1px lightgrey;
-    overflow: auto;
     z-index: 1000;
     background: whitesmoke;
     border: none;
     padding: 10px;
+}
+
+#memberList {
+	height: 432px;
+	overflow: auto;
 }
 
 #member_wrap {
@@ -126,17 +130,18 @@ body{
 .room_main {
 	position: relative;
 	margin-bottom: 32px;
-	width: 452px;
-	height: 618px;
+	width: 391px;
+	height: 496px;
 	background-image: url("../../../../resources/image/채팅바탕.PNG"); 
 	border-radius: 25px; 
+	background-size: cover;
 	box-shadow: rgba(0, 0, 0, 0.18) 0px 0px 5px 1px;
 	margin-left: 17.5px;
 }
 
 .chatting_wrap {
-	width: 422px;
-	height: 500px;
+	width: 364px;
+	height: 424px;
 	padding: 15px;
 	overflow: auto;
 }
@@ -159,7 +164,7 @@ body{
 	justify-content: center;
 	align-items: center;
 	min-height: 30px;
-	max-width: 300px;
+	max-width: 230px;
 	position: relative;
 	background-color: rgb(237, 237, 237);
 	border-radius: 5px;
@@ -196,7 +201,7 @@ body{
 	justify-content: center;
 	align-items: center;
 	min-height: 30px;
-	max-width: 300px;
+	max-width: 230px;
 	position: relative;
 	background-color: rgb(131, 221, 169);
 	border-radius: 5px;
@@ -219,18 +224,18 @@ body{
 .input_wrap {
 	display: flex;
 	position: absolute; 
-	width: 100%;
-	height: 46px;
+	width: 94%;
+	height: 39px;
 	bottom: 20px;
 	left: 12px;
 }
 #input_box {
 	width: 358px; 
-	height: 40px;
+	height: 35px;
 }
 #send_btn {
 	width: 59px;
-	height: 46px;
+	height: 41px;
 	background-color: rgb(241, 196, 15);
 	display: flex;
 	justify-content: center;
