--- a/src/main/webapp/resources/css/include/chat/chat-room.css
+++ b/src/main/webapp/resources/css/include/chat/chat-room.css
@@ -262,11 +262,13 @@ html {
 	left: 12px;
 }
 #input_box {
-	width: 358px; 
-	height: 35px;
-	border-radius: 25px 0 0 25px;
-	border: none;
+	    width: 358px;
+    height: 37px;
+    border-radius: 25px 0 0 25px;
+    border: none;
+    padding: 0 20px 0 20px;
 }
+
 #send_btn {
 	width: 59px;
 	height: 37px;
