[11.17 구현] 아임포트 api 이용해서 결제금액, 아이디 서버에 담는 기능 구현

--- a/src/main/webapp/resources/css/include/modal/modal.css
+++ b/src/main/webapp/resources/css/include/modal/modal.css
@@ -6,6 +6,7 @@
 	width: 100%;
 	background-color: transparent;
 	z-index: 9000000000;
+	border-radius: 15px;
 	display: none;
 }
 
@@ -59,6 +60,7 @@
 	background-position: bottom 2px right 2px;
 	position: absolute;
 	z-index: 998;
+	border-radius: 15px;
 }
 
 .modal_tit{
