[11.18 현수] help main 작업

--- a/src/main/webapp/resources/css/include/head/menu_head.css
+++ b/src/main/webapp/resources/css/include/head/menu_head.css
@@ -153,6 +153,16 @@ html, body {
     font-weight: bolder;
 }
 
+.login_btn{
+	font-weight: bolder;
+   color: #e67e00
+}
+
+.join_btn{
+	margin-right: 20px;
+   font-weight: bolder;
+}
+
 a{
    color:black;
    text-decoration: none;   
