[11.18 현수] 오늘의 마지막 푸시!

--- a/src/main/webapp/resources/css/include/head/menu_head.css
+++ b/src/main/webapp/resources/css/include/head/menu_head.css
@@ -62,13 +62,14 @@ html, body {
 
 .login_btn{
 	font-weight: bolder;
-	color: #e67e00
+	color: #e67e00;
 	cursor: pointer;
 }
 
 .join_btn{
 	margin-right: 20px;
 	font-weight: bolder;
+	cursor: pointer;
 }
 
 .nav_title {
