--- a/src/main/webapp/resources/css/mypage/mypage_common_css.css
+++ b/src/main/webapp/resources/css/mypage/mypage_common_css.css
@@ -920,3 +920,11 @@ html, body {
 	font-weight: bold;
 	text-align: center;
 }
+
+.alertMsg {
+	text-align: center;
+	font-weight: bold;
+	font-size: 18px;
+	margin-bottom: 10px;
+	color: #333333;
+}
