[11.19 경민] 친구리스트 출력, 수정

--- a/src/main/webapp/resources/css/mypage/mypage_common_css.css
+++ b/src/main/webapp/resources/css/mypage/mypage_common_css.css
@@ -811,9 +811,10 @@ html, body {
 	width: 50%;
 	height: 33%;
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-between;
 	align-items: center;
 	flex-shrink: 0;
+	flex-wrap: wrap;
 }
 
 #neighboricon {
