--- a/src/main/webapp/resources/css/help/my.css
+++ b/src/main/webapp/resources/css/help/my.css
@@ -71,6 +71,22 @@
 	width: 1100px;
 	height: 200px;
 	margin: 0 0 0 20px;
+	position: relative;
+}
+
+.state_filter{
+	position: absolute;
+	top: -15px;
+	right: 94px;
+	width: 130px;
+	height: 30px;
+	color: gray;
+	border: 2px solid orange;
+	border-radius: 10px;
+}
+
+.state_filter option{
+	color: gray;
 }
 
 .req_list table{
