--- a/src/main/webapp/resources/css/help/review.css
+++ b/src/main/webapp/resources/css/help/review.css
@@ -84,8 +84,14 @@
 	border: none;
 	font-weight: bolder;
 	font-size: 18px;
+	text-align: center;
 }
 
 .fieldList{
 	width: 230px;
+}
+
+.paging{
+	display: block;
+	text-align: center;
 }
