--- a/src/main/webapp/resources/css/help/detail.css
+++ b/src/main/webapp/resources/css/help/detail.css
@@ -12,6 +12,8 @@
 	padding: 20px;
 	float: right;
 	display: none;
+	position: relative;
+    transform: translate(10px, 45px);
 }
 
 .req_img {
@@ -25,6 +27,8 @@
 	width: 400px;
 	height: 250px;
 	border-radius: 20px;
+	position: relative;
+    transform: translate(52px, 179px);
 }
 
 .reg_img2 img {
