--- a/src/main/webapp/resources/css/help/my.css
+++ b/src/main/webapp/resources/css/help/my.css
@@ -115,10 +115,16 @@
     border-radius: 5px;
     cursor: pointer;
     font-weight: bolder;
+    color: black;
     border: 0;
+    margin-right: 6px;
     box-shadow: 0 2px 2px 1px grey;
-	background-color: rgb(213,213,213);
 }
+
+.list_btn:hover{
+	box-shadow: inset 0 0 5px 1px #71180e;
+}
+
 .list_btn_red{
 	width: 70px;
     height: 24px;
@@ -207,18 +213,19 @@
 
 .bk_btn{
 	display: inline-flex;
-	background-color: rgb(190,190,190);
-	border: 1px thin;
+	border: none;
 	width: 100px;
 	height: 30px;
 	justify-content: center;
 	font-weight: bolder;
 	font-size: 18px;
+	border-radius: 5px 5px 0 0;
+	color: gray;
 }
 
 .bk_body{
 	width: 1030px;
-	height: 800px;
+	height: 770px;
 	border: 1px solid;
 	border-color: rgb(213,213,213);
 }
